--- a/src/app/assignments/edit-assignment/edit-assignment.component.css
+++ b/src/app/assignments/edit-assignment/edit-assignment.component.css
@@ -1,5 +1,55 @@
+@import './../../../styles.css';
+
 .form {
     display: flex;
     flex-direction: column;
     margin:5px;
+}
+.mat-stepper-horizontal {
+  margin-top: 8px;
+}
+
+.mat-mdc-form-field {
+  margin-top: 16px;
+}
+
+::ng-deep .mat-mdc-card {
+  width: 800px;
+  margin: 30px 20%;
+  height: 400px;
+  justify-content: center;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+}
+
+.image-container {
+  margin-left: 20px;
+}
+
+button{
+  background-color: var(--pink) !important;
+  margin: 10px;
+  color: white !important;
+}
+
+.btn-submit{
+  text-align: right;
+}
+.btn-submit button{
+  background-color: var(--green) !important;
+}
+
+
+/* Style local */
+::ng-deep .success-snackbar {
+  background-color: #50bfa5!important; /* Couleur de fond en cas de succès */
+  color: #000000!important; /* Couleur du texte en cas de succès */
+}
+
+::ng-deep .error-snackbar {
+  background-color: #CB2823!important; /* Couleur de fond en cas d'erreur */
+  color: #ffffff!important; /* Couleur du texte en cas d'erreur */
 }
