Ajout dateRendu dans la création d'assignment

--- a/src/app/assignments/add-assignment/add-assignment.component.css
+++ b/src/app/assignments/add-assignment/add-assignment.component.css
@@ -53,3 +53,7 @@ button{
   background-color: #CB2823!important; /* Couleur de fond en cas d'erreur */
   color: #ffffff!important; /* Couleur du texte en cas d'erreur */
 }
+
+.me-2{
+  margin-right: 10px;
+}
