--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -22,6 +22,10 @@
                 <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
               </div>
             </mat-card-header>
+            <mat-card-actions>
+              <button mat-button color="primary" (click)="editAssignment(item)">Modifier</button>
+              <button mat-button color="primary" (click)="viewDetails(item)">Détail</button>
+            </mat-card-actions>
           </mat-card>
         </div>
       </div>
@@ -48,6 +52,9 @@
                 <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
               </div>
             </mat-card-header>
+            <mat-card-actions>
+              <button mat-button color="primary" (click)="viewDetails(item)">Détail</button>
+            </mat-card-actions>
           </mat-card>
         </div>
       </div>
