--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -3,38 +3,8 @@
   <div class="spacer"></div>
   <ul class="nav-links">
     <li><a routerLink="/home"><mat-icon>home</mat-icon> Accueil</a></li>
-    <li><a routerLink="/add"><mat-icon>assignment</mat-icon>Assigner</a></li>
-    <li><a routerLink="/contact"><mat-icon>account_circle</mat-icon> Profil</a></li>
+    <li  *ngIf="isConnectedAsAdmin"><a routerLink="/add"><mat-icon>assignment</mat-icon>Assigner</a></li>
   </ul>
-  <button class="logout-button" (click)="logout()">Logout</button>
+  <button class="logout-button" *ngIf="!isConnected">Se connecter</button>
+  <button class="logout-button" *ngIf="isConnected">Se déconnecter</button>
 </nav>
-
-<!-- old -->
-<!-- <h1>
-  <nav>
-      <a routerLink="/home">{{title}}</a>
-  </nav>
-</h1>
-<p>
-  <button mat-raised-button color="primary" (click)="creerDonneesDeTest()">
-      Peupler BD avec données de test
-  </button>
-</p>
-
-<div *ngIf="currentRoute !== '/login'">
-  <p>Route courante : {{currentRoute}}</p>
-  <nav>
-      <a routerLink="/login">
-          <button mat-raised-button (click)="login()">{{labelConnexion}}</button>
-      </a>
-  </nav>
-  <p *ngIf="isLogged()">Vous êtes connecté en tant que {{nom}}</p>
-</div> -->
-
-<!-- Indique que le composant affiché sera celui
-   correspondant à l'URL courant
--->
-<div class="main">
-  <router-outlet></router-outlet>
-</div>
-
