--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -26,7 +26,7 @@
               </div>
             </mat-card-header>
             <mat-card-actions>
-              <button mat-button color="primary" (click)="editAssignment(item)"><mat-icon>edit</mat-icon>Modifier</button>
+              <button *ngIf="isDragEnabled" mat-button color="primary" (click)="editAssignment(item)"><mat-icon>edit</mat-icon>Modifier</button>
               <button mat-button color="primary" (click)="viewDetails(item)"><mat-icon>details</mat-icon>Détail</button>
             </mat-card-actions>
           </mat-card>
