--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar my-navbar">
   <a routerLink="/" class="logo">Mes Devoirs</a>
   <div class="spacer"></div>
   <ul class="nav-links">
