--- a/src/app/assignments/assignment-detail/assignment-detail.component.css
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.css
@@ -76,3 +76,14 @@ mat-checkbox {
   padding: 16px 16px !important;
   background-color: var(--blue);
 }
+
+/* Style local */
+::ng-deep .success-snackbar {
+  background-color: #50bfa5!important; /* Couleur de fond en cas de succès */
+  color: #000000!important; /* Couleur du texte en cas de succès */
+}
+
+::ng-deep .error-snackbar {
+  background-color: #CB2823!important; /* Couleur de fond en cas d'erreur */
+  color: #ffffff!important; /* Couleur du texte en cas d'erreur */
+}
