--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -1,3 +1,4 @@
+<app-spinner></app-spinner>
 <main class="container">
   <mat-card  *ngIf="assignmentTransmis" class="example-card">
   <mat-card-header>
