--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -22,23 +22,23 @@
     width: 100% !important;
   }
 
-  .mat-column-id {
+  :host .mat-column-id {
     width: 32px !important;
     border-right: 1px solid currentColor !important;
     padding-right: 24px !important;
     text-align: center !important;
   }
 
-  .mat-column-nom {
+  :host .mat-column-nom {
     padding-left: 16px !important;
     font-size: 20px !important;
   }
 
-  .mat-column-dateDeRendu {
+  :host .mat-column-dateDeRendu {
     font-style: italic !important;
   }
 
-  .mat-column-rendu {
+  :host .mat-column-rendu {
     width: 32px !important;
     text-align: center !important;
     font-weight: bold !important;
@@ -84,11 +84,11 @@
     background-color: black !important;
   }
 
-  .cdk-drag-placeholder {
+  :host .cdk-drag-placeholder {
     opacity: 0 !important;
   }
 
-  .cdk-drag-animating {
+  :host .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1) !important;
   }
 
@@ -138,7 +138,18 @@
 
 /* css for modal */
 
-.form-group {
+:host .form-group {
   margin-bottom: 10px !important;
 }
 
+
+/* Style local */
+:host .success-snackbar {
+  background-color: #50bfa5!important; /* Couleur de fond en cas de succès */
+  color: #000000!important; /* Couleur du texte en cas de succès */
+}
+
+:host .error-snackbar {
+  background-color: #CB2823!important; /* Couleur de fond en cas d'erreur */
+  color: #ffffff!important; /* Couleur du texte en cas d'erreur */
+}
