--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -11,7 +11,7 @@
   <mat-card-content>
     <ul>
       <li>Matière: {{assignmentTransmis.matiere.nom}}</li>
-      <li>Elève: {{assignmentTransmis.matiere.nom}}</li>
+      <li>Elève: {{assignmentTransmis.eleve.nom}}</li>
       <li>Remarque: {{assignmentTransmis.remarques}}</li>
     </ul>
   </mat-card-content>
